--- a/part1.ipynb
+++ b/part1.ipynb
@@ -12,26 +12,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "collapsed": true,
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "CdRZGMj8elgm",
-        "outputId": "7f8018ad-a3f2-49a9-c2e2-e69f19cdcee8"
+        "id": "X3X387F2fovx",
+        "outputId": "a78b9af8-3501-45dc-dbc8-04ef4a1a7be5"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "this is a test\n"
+            "this is a second test\n"
           ]
         }
       ],
       "source": [
-        "print(\"this is a test\")"
+        "print(\"this is a second test\")"
       ]
     },
     {
@@ -40,7 +40,7 @@
         ""
       ],
       "metadata": {
-        "id": "70HXq-jHep2K"
+        "id": "tHFm9qobf9Q2"
       },
       "execution_count": null,
       "outputs": []
