testing out commiting to github from colab

--- a/part1.ipynb
+++ b/part1.ipynb
@@ -1,4 +1,22 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "part1",
+      "provenance": [],
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMUPiScaF6LAYRSaiw4y7ly",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -12,64 +30,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "collapsed": true,
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "X3X387F2fovx",
-        "outputId": "a78b9af8-3501-45dc-dbc8-04ef4a1a7be5"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "this is a second test\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(\"this is a second test\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "tHFm9qobf9Q2"
-      },
       "execution_count": null,
-      "outputs": []
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 2
+      "metadata": {
+        "id": "Fa-twcaCgR2R"
       },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython2",
-      "version": "2.7.6"
-    },
-    "colab": {
-      "name": "part1.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "outputs": [],
+      "source": [
+        "print(\"this is a third test\")"
+      ]
     }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
