test for part 1

--- a/part1.ipynb
+++ b/part1.ipynb
@@ -6,7 +6,7 @@
       "name": "part1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMUPiScaF6LAYRSaiw4y7ly",
+      "authorship_tag": "ABX9TyN7+RT5sAyqnpMtoAP/nZH0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sagitiminsky/Final-Project-in-Advanced-Lectures-in-Learning-Theory/blob/main/part1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sagitiminsky/Final-Project-in-Advanced-Lectures-in-Learning-Theory/blob/part1/part1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -36,7 +36,7 @@
       },
       "outputs": [],
       "source": [
-        "print(\"this is a third test\")"
+        "print(\"this is a test for part 1\")"
       ]
     }
   ]
