--- a/part1.ipynb
+++ b/part1.ipynb
@@ -6,7 +6,7 @@
       "name": "part1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMN+H8csbA14oirUOCWoodZ",
+      "authorship_tag": "ABX9TyNWZLHlPE4gD3bQhsqKrG3f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -352,6 +352,20 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Sources\n",
+        "\n",
+        "\n",
+        "1.   GD - https://www.linkedin.com/pulse/pytorch-gradient-descent-stochastic-mini-batch-code-sobh-phd/\n",
+        "2.  Constrained GD - https://botorch.org/tutorials/optimize_stochastic\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "rtg8c0EyBeRj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Connect to Drive"
       ],
       "metadata": {
@@ -544,7 +558,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Creting 3 different classification problems"
+        "# Preprocessing and creting 3 different classification problems\n",
+        "\n",
+        "The values 0.1307 and 0.3081 used for the Normalize() transformation below are the global mean and standard deviation of the MNIST dataset, we'll take them as a given here."
       ],
       "metadata": {
         "id": "KPDgjS19HdNG"
@@ -557,13 +573,14 @@
         "                    lambda img: torchvision.transforms.functional.rotate(img, -90),\n",
         "                    lambda img: torchvision.transforms.functional.hflip(img),\n",
         "                    torchvision.transforms.ToTensor(),\n",
+        "                    torchvision.transforms.Normalize((0.1307,), (0.3081,)),\n",
         "                    lambda x: torch.flatten(x)\n",
         "                ])"
       ],
       "metadata": {
         "id": "LG-R3C8j4Gce"
       },
-      "execution_count": 48,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -591,7 +608,7 @@
       "metadata": {
         "id": "_EnujD1pHh1h"
       },
-      "execution_count": 49,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -616,7 +633,7 @@
       "metadata": {
         "id": "4P0IM1RjH28j"
       },
-      "execution_count": 50,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -645,34 +662,8 @@
       "metadata": {
         "id": "uCg3FXVOIEi9"
       },
-      "execution_count": 51,
+      "execution_count": 86,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "mnist_trainset_prime_vs_not_prime.targets"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "88-dEsmL7jmX",
-        "outputId": "b4d39c9e-f1be-4c59-f65c-e5e27aee6b89"
-      },
-      "execution_count": 73,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([4, 1, 4,  ..., 1, 5, 0])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 73
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -842,16 +833,6 @@
     {
       "cell_type": "code",
       "source": [
-        "n_epochs = 3\n",
-        "batch_size_train = 64\n",
-        "learning_rate = 0.01\n",
-        "momentum = 0.5\n",
-        "log_interval = 10\n",
-        "\n",
-        "random_seed = 1\n",
-        "torch.backends.cudnn.enabled = False\n",
-        "torch.manual_seed(random_seed)\n",
-        "\n",
         "class Net(torch.nn.Module):\n",
         "    def __init__(self, n_feature, n_hidden, n_output):\n",
         "        super(Net, self).__init__()\n",
@@ -874,8 +855,9 @@
     {
       "cell_type": "code",
       "source": [
-        "def train(experiment,optimizer_name, epoch):\n",
+        "def train(experiment,optimizer_name, epoch,lr,weight_decay):\n",
         "  network.train()\n",
+        "  optimizer = torch.optim.SGD(network.parameters(), lr=lr) \n",
         "  if optimizer_name=='gd':\n",
         "    prediction=network(experiment.data)\n",
         "    loss = criterion(prediction, experiment.targets)\n",
@@ -883,14 +865,18 @@
         "    loss.backward()\n",
         "    optimizer.step()\n",
         "\n",
-        "  if optimizer_name=='constrained_gd':\n",
+        "  elif optimizer_name=='constrained_gd':\n",
         "    prediction=network(experiment.data)\n",
         "    loss = criterion(prediction, experiment.targets)\n",
         "    optimizer.zero_grad()\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
+        "    with torch.no_grad():\n",
+        "      for param in network.parameters():\n",
+        "          param.clamp_(-1, 1)\n",
         "\n",
-        "  if optimizer_name=='regularized_gd':\n",
+        "  elif optimizer_name=='regularized_gd':\n",
+        "    optimizer = torch.optim.SGD(network.parameters(), lr=lr, weight_decay=weight_decay) \n",
         "    prediction=network(experiment.data)\n",
         "    loss = criterion(prediction, experiment.targets)\n",
         "    optimizer.zero_grad()\n",
@@ -918,14 +904,28 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "n_epochs = 3\n",
+        "batch_size_train = 64\n",
+        "learning_rate = 0.01\n",
+        "momentum = 0.5\n",
+        "log_interval = 10\n",
+        "lrs=[1e-4]\n",
+        "weight_decays=[1e-5]\n",
+        "\n",
+        "random_seed = 1\n",
+        "torch.backends.cudnn.enabled = False\n",
+        "torch.manual_seed(random_seed)\n",
+        "\n",
         "network = Net(n_feature=784, n_hidden=10, n_output=1)\n",
-        "optimizer = torch.optim.SGD(network.parameters(), lr=0.2) \n",
         "optimizers_names = ['gd','constrained_gd','regularized_gd','sgd'] \n",
         "experimetns = [mnist_trainset_zero_to_four_vs_five_to_nine, mnist_trainset_even_vs_odd, mnist_trainset_prime_vs_not_prime]\n",
         "for experiment in experimetns:\n",
         "  for optimizer_name in optimizers_names:\n",
         "    for epoch in range(1, n_epochs + 1):\n",
-        "      train(experiment,optimizer_name, epoch)"
+        "      for lr in lrs:\n",
+        "        for weight_decay in weight_decays:\n",
+        "          train(experiment,optimizer_name, epoch,lr, weight_decay)"
       ],
       "metadata": {
         "id": "GqDlwznGi7je"
