--- a/part1.ipynb
+++ b/part1.ipynb
@@ -6,7 +6,7 @@
       "name": "part1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN4i049kxrjgvUeHCeY4rLC",
+      "authorship_tag": "ABX9TyMua4KvB/3dE5zSLbfAnejQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,36 +58,36 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "095d064f-653f-48d1-f9ba-d4049230991c"
+        "outputId": "595b3367-65eb-454b-ba7b-37f35e7cde33"
       },
-      "execution_count": 16,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Requirement already satisfied: wandb in /usr/local/lib/python3.7/dist-packages (0.12.10)\n",
-            "Requirement already satisfied: yaspin>=1.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.1.0)\n",
-            "Requirement already satisfied: sentry-sdk>=1.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.5.5)\n",
-            "Requirement already satisfied: promise<3,>=2.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.3)\n",
-            "Requirement already satisfied: docker-pycreds>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (0.4.0)\n",
-            "Requirement already satisfied: shortuuid>=0.5.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.0.8)\n",
-            "Requirement already satisfied: protobuf>=3.12.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (3.17.3)\n",
-            "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.8.2)\n",
-            "Requirement already satisfied: psutil>=5.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (5.4.8)\n",
-            "Requirement already satisfied: six>=1.13.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.15.0)\n",
             "Requirement already satisfied: PyYAML in /usr/local/lib/python3.7/dist-packages (from wandb) (3.13)\n",
-            "Requirement already satisfied: pathtools in /usr/local/lib/python3.7/dist-packages (from wandb) (0.1.2)\n",
-            "Requirement already satisfied: GitPython>=1.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (3.1.26)\n",
-            "Requirement already satisfied: Click!=8.0.0,>=7.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (7.1.2)\n",
             "Requirement already satisfied: requests<3,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.23.0)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.7/dist-packages (from GitPython>=1.0.0->wandb) (3.10.0.2)\n",
+            "Requirement already satisfied: six>=1.13.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.15.0)\n",
+            "Requirement already satisfied: sentry-sdk>=1.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.5.5)\n",
+            "Requirement already satisfied: Click!=8.0.0,>=7.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (7.1.2)\n",
+            "Requirement already satisfied: promise<3,>=2.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.3)\n",
+            "Requirement already satisfied: protobuf>=3.12.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (3.17.3)\n",
+            "Requirement already satisfied: docker-pycreds>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (0.4.0)\n",
+            "Requirement already satisfied: psutil>=5.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (5.4.8)\n",
+            "Requirement already satisfied: GitPython>=1.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (3.1.26)\n",
+            "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.8.2)\n",
+            "Requirement already satisfied: shortuuid>=0.5.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.0.8)\n",
+            "Requirement already satisfied: yaspin>=1.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.1.0)\n",
+            "Requirement already satisfied: pathtools in /usr/local/lib/python3.7/dist-packages (from wandb) (0.1.2)\n",
             "Requirement already satisfied: gitdb<5,>=4.0.1 in /usr/local/lib/python3.7/dist-packages (from GitPython>=1.0.0->wandb) (4.0.9)\n",
+            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.7/dist-packages (from GitPython>=1.0.0->wandb) (3.10.0.2)\n",
             "Requirement already satisfied: smmap<6,>=3.0.1 in /usr/local/lib/python3.7/dist-packages (from gitdb<5,>=4.0.1->GitPython>=1.0.0->wandb) (5.0.0)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (1.24.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (2021.10.8)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (2.10)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (3.0.4)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (2.10)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (2021.10.8)\n",
             "Requirement already satisfied: termcolor<2.0.0,>=1.1.0 in /usr/local/lib/python3.7/dist-packages (from yaspin>=1.0.0->wandb) (1.1.0)\n",
             "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33msagit\u001b[0m (use `wandb login --relogin` to force relogin)\n"
           ]
@@ -128,9 +128,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2KLgJxQkoqNV",
-        "outputId": "81fee7d6-bad9-4a9f-e492-5cd6b35e0f01"
+        "outputId": "181119f9-4381-4e71-f38d-68ad57976456"
       },
-      "execution_count": 17,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,7 @@
       "metadata": {
         "id": "B4bI2jNDpiYs"
       },
-      "execution_count": 18,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "isIoQD3dlr9L"
       },
-      "execution_count": 19,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -203,9 +203,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2OeUJ67lvCla",
-        "outputId": "cc6881f1-e112-4806-9ba7-296bf67b453b"
+        "outputId": "6b1f4da0-144e-49eb-e110-0d9a47acf9eb"
       },
-      "execution_count": 20,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,7 +253,7 @@
       "metadata": {
         "id": "LG-R3C8j4Gce"
       },
-      "execution_count": 21,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -283,9 +283,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "46dabaa7-c42d-4e9b-ec0a-62829e232904"
+        "outputId": "12552e52-b691-43c4-e4f8-ec2e702a43c2"
       },
-      "execution_count": 22,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +321,7 @@
       "metadata": {
         "id": "4P0IM1RjH28j"
       },
-      "execution_count": 23,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -350,7 +350,7 @@
       "metadata": {
         "id": "uCg3FXVOIEi9"
       },
-      "execution_count": 24,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -406,7 +406,7 @@
         "            torch.nn.Linear(n_feature, n_hidden),\n",
         "            nn.ReLU(),\n",
         "            torch.nn.Linear(n_hidden, n_output),\n",
-        "            nn.Sigmoid(),\n",
+        "            nn.ReLU(),\n",
         "        ).to(device)\n",
         "\n",
         "    def forward(self, x):\n",
@@ -415,7 +415,7 @@
       "metadata": {
         "id": "IVbIe6JQexoQ"
       },
-      "execution_count": 25,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -485,7 +485,7 @@
       "metadata": {
         "id": "cix3bp5hjDSm"
       },
-      "execution_count": 26,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -499,7 +499,7 @@
         "batch_size = 64\n",
         "momentum = 0.5\n",
         "log_interval = 1\n",
-        "lrs=[1e-3,1e-2,1e-1]\n",
+        "lrs=[1e-2,1e-1]\n",
         "weight_decays=[1e-06, 1e-5, 1e-4]\n",
         "\n",
         "random_seed = 1\n",
@@ -520,29 +520,26 @@
         "      for weight_decay in weight_decays:\n",
         "          print(f\"experiment:{experiment} | optimizer_name:{optimizer_name}\")\n",
         "          network = Net(n_feature=784, n_hidden=2, n_output=1)\n",
-        "          run=wandb.init(project=\"Final Project in Advanced Lectures in Learning\", entity=\"sagit\", name=f\"experiment:{experiment} | optimizer_name:{optimizer_name} | lr:{lr} | weight_decay:{weight_decay}\")\n",
-        "          wandb.watch(network, log_freq=1)\n",
+        "          # run=wandb.init(project=\"Final Project in Advanced Lectures in Learning\", entity=\"sagit\", name=f\"experiment:{experiment} | optimizer_name:{optimizer_name} | lr:{lr} | weight_decay:{weight_decay}\")\n",
+        "          # wandb.watch(network, log_freq=1)\n",
         "          for epoch in range(1, n_epochs + 1):\n",
         "            relics=train(experimetns[experiment],optimizer_name, epoch,lr, weight_decay)\n",
         "            if epoch % log_interval==0:\n",
         "              print(f\"loss:{relics['loss']} | error:{relics['error']}\")\n",
         "              print(f\"predictions: {relics['predictions']}\")\n",
         "              print(f\"targets: {relics['targets']}\")\n",
-        "              wandb.log({\n",
-        "                  \"loss\": relics[\"loss\"],\n",
-        "                  \"error\": relics[\"error\"],\n",
-        "                  \"epoch\": epoch,\n",
-        "                  \"predictions\": relics[\"predictions\"],\n",
-        "                  \"targets\": relics[\"targets\"]\n",
-        "              })"
+        "              # wandb.log({\n",
+        "              #     \"loss\": relics[\"loss\"],\n",
+        "              #     \"error\": relics[\"error\"],\n",
+        "              #     \"epoch\": epoch\n",
+        "              # })"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 419
+          "base_uri": "https://localhost:8080/"
         },
         "id": "GqDlwznGi7je",
-        "outputId": "37619173-b5f6-4a57-97ca-f420a3dd26c8"
+        "outputId": "03484d3a-c3d8-4858-c027-43a41fc1c54d"
       },
       "execution_count": null,
       "outputs": [
@@ -552,58 +549,6 @@
           "text": [
             "Using device: cuda\n",
             "experiment:zero_to_four_vs_five_to_nine | optimizer_name:gd\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33msagit\u001b[0m (use `wandb login --relogin` to force relogin)\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "\n",
-              "                    Syncing run <strong><a href=\"https://wandb.ai/sagit/Final%20Project%20in%20Advanced%20Lectures%20in%20Learning/runs/1yb1o4s0\" target=\"_blank\">experiment:zero_to_four_vs_five_to_nine | optimizer_name:gd | lr:0.001 | weight_decay:1e-06</a></strong> to <a href=\"https://wandb.ai/sagit/Final%20Project%20in%20Advanced%20Lectures%20in%20Learning\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">docs</a>).<br/>\n",
-              "\n",
-              "                "
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:7: UserWarning: Implicit dimension choice for log_softmax has been deprecated. Change the call to include dim=X as an argument.\n",
-            "  import sys\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "loss:11.159954071044922 | error:0.9999666810035706\n",
-            "predictions: tensor([4.0120e-22, 4.1297e-14, 9.4711e-06,  ..., 2.7631e-15, 3.1536e-01,\n",
-            "        4.4765e-05], device='cuda:0', grad_fn=<ViewBackward0>)\n",
-            "targets: tensor([0, 0, 0,  ..., 0, 1, 0], device='cuda:0')\n",
-            "loss:11.100065231323242 | error:0.9998666644096375\n",
-            "predictions: tensor([3.7536e-27, 1.6888e-16, 9.6483e-10,  ..., 1.4744e-16, 8.8032e-04,\n",
-            "        2.2088e-08], device='cuda:0', grad_fn=<ViewBackward0>)\n",
-            "targets: tensor([0, 0, 0,  ..., 0, 1, 0], device='cuda:0')\n",
-            "loss:11.063224792480469 | error:0.9990833401679993\n",
-            "predictions: tensor([4.1688e-31, 2.6127e-18, 6.4587e-13,  ..., 1.5248e-17, 3.0088e-08,\n",
-            "        6.2357e-11], device='cuda:0', grad_fn=<ViewBackward0>)\n",
-            "targets: tensor([0, 0, 0,  ..., 0, 1, 0], device='cuda:0')\n",
-            "loss:11.042346000671387 | error:0.9976666569709778\n",
-            "predictions: tensor([5.1538e-34, 1.3015e-19, 2.9104e-15,  ..., 3.0473e-18, 3.4335e-12,\n",
-            "        1.5724e-13], device='cuda:0', grad_fn=<ViewBackward0>)\n",
-            "targets: tensor([0, 0, 0,  ..., 0, 1, 0], device='cuda:0')\n"
           ]
         }
       ]
