--- a/part1.ipynb
+++ b/part1.ipynb
@@ -6,7 +6,7 @@
       "name": "part1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMua4KvB/3dE5zSLbfAnejQ",
+      "authorship_tag": "ABX9TyNCvUol3ZWGeQDxwuyraGgY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,36 +58,36 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "595b3367-65eb-454b-ba7b-37f35e7cde33"
+        "outputId": "b9e777ef-1d28-4d55-f7be-155039ca6354"
       },
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Requirement already satisfied: wandb in /usr/local/lib/python3.7/dist-packages (0.12.10)\n",
-            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.7/dist-packages (from wandb) (3.13)\n",
-            "Requirement already satisfied: requests<3,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.23.0)\n",
-            "Requirement already satisfied: six>=1.13.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.15.0)\n",
-            "Requirement already satisfied: sentry-sdk>=1.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.5.5)\n",
-            "Requirement already satisfied: Click!=8.0.0,>=7.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (7.1.2)\n",
-            "Requirement already satisfied: promise<3,>=2.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.3)\n",
-            "Requirement already satisfied: protobuf>=3.12.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (3.17.3)\n",
-            "Requirement already satisfied: docker-pycreds>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (0.4.0)\n",
-            "Requirement already satisfied: psutil>=5.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (5.4.8)\n",
             "Requirement already satisfied: GitPython>=1.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (3.1.26)\n",
-            "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.8.2)\n",
+            "Requirement already satisfied: docker-pycreds>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (0.4.0)\n",
+            "Requirement already satisfied: protobuf>=3.12.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (3.17.3)\n",
+            "Requirement already satisfied: six>=1.13.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.15.0)\n",
             "Requirement already satisfied: shortuuid>=0.5.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.0.8)\n",
             "Requirement already satisfied: yaspin>=1.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.1.0)\n",
             "Requirement already satisfied: pathtools in /usr/local/lib/python3.7/dist-packages (from wandb) (0.1.2)\n",
-            "Requirement already satisfied: gitdb<5,>=4.0.1 in /usr/local/lib/python3.7/dist-packages (from GitPython>=1.0.0->wandb) (4.0.9)\n",
+            "Requirement already satisfied: requests<3,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.23.0)\n",
+            "Requirement already satisfied: promise<3,>=2.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.3)\n",
+            "Requirement already satisfied: sentry-sdk>=1.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.5.5)\n",
+            "Requirement already satisfied: Click!=8.0.0,>=7.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (7.1.2)\n",
+            "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.8.2)\n",
+            "Requirement already satisfied: psutil>=5.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (5.4.8)\n",
+            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.7/dist-packages (from wandb) (3.13)\n",
             "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.7/dist-packages (from GitPython>=1.0.0->wandb) (3.10.0.2)\n",
+            "Requirement already satisfied: gitdb<5,>=4.0.1 in /usr/local/lib/python3.7/dist-packages (from GitPython>=1.0.0->wandb) (4.0.9)\n",
             "Requirement already satisfied: smmap<6,>=3.0.1 in /usr/local/lib/python3.7/dist-packages (from gitdb<5,>=4.0.1->GitPython>=1.0.0->wandb) (5.0.0)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (1.24.3)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (3.0.4)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (2.10)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (2021.10.8)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (3.0.4)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (1.24.3)\n",
             "Requirement already satisfied: termcolor<2.0.0,>=1.1.0 in /usr/local/lib/python3.7/dist-packages (from yaspin>=1.0.0->wandb) (1.1.0)\n",
             "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33msagit\u001b[0m (use `wandb login --relogin` to force relogin)\n"
           ]
@@ -128,9 +128,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2KLgJxQkoqNV",
-        "outputId": "181119f9-4381-4e71-f38d-68ad57976456"
+        "outputId": "c14ee924-4c0f-44db-f116-edf9057fd652"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,7 @@
       "metadata": {
         "id": "B4bI2jNDpiYs"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "isIoQD3dlr9L"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -203,9 +203,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2OeUJ67lvCla",
-        "outputId": "6b1f4da0-144e-49eb-e110-0d9a47acf9eb"
+        "outputId": "c62ed3ac-174e-4018-8825-244f79d45530"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,7 +253,7 @@
       "metadata": {
         "id": "LG-R3C8j4Gce"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -283,9 +283,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "12552e52-b691-43c4-e4f8-ec2e702a43c2"
+        "outputId": "9571d17a-6d8a-4bc5-eba9-b84dbbcc874a"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +321,7 @@
       "metadata": {
         "id": "4P0IM1RjH28j"
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -350,7 +350,7 @@
       "metadata": {
         "id": "uCg3FXVOIEi9"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -405,17 +405,21 @@
         "            torch.nn.Flatten(),\n",
         "            torch.nn.Linear(n_feature, n_hidden),\n",
         "            nn.ReLU(),\n",
-        "            torch.nn.Linear(n_hidden, n_output),\n",
+        "            torch.nn.Linear(n_hidden, n_hidden),\n",
         "            nn.ReLU(),\n",
+        "            torch.nn.Linear(n_hidden, n_output),\n",
+        "            nn.Sigmoid()\n",
         "        ).to(device)\n",
         "\n",
         "    def forward(self, x):\n",
-        "        return self.features(x)\n"
+        "        return self.features(x)\n",
+        "\n",
+        "criterion = torch.nn.MSELoss()"
       ],
       "metadata": {
         "id": "IVbIe6JQexoQ"
       },
-      "execution_count": 10,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -424,21 +428,21 @@
         "def train(experiment,optimizer_name, epoch,lr,weight_decay):\n",
         "  network.train()\n",
         "  optimizer = torch.optim.SGD(network.parameters(), lr=lr)\n",
-        "  targets=torch.LongTensor([target for feature,target in experiment]).to(device)\n",
+        "  targets=torch.FloatTensor([target for feature,target in experiment]).to(device)\n",
         "  if optimizer_name=='gd':\n",
         "    predictions=network(experiment.data.to(device).float()).view(-1)\n",
-        "    loss = F.nll_loss(F.log_softmax(predictions.view(-1)), targets)\n",
+        "    loss = F.mse_loss(predictions, targets)\n",
         "    error=sum(torch.ne(predictions,targets))\n",
-        "    optimizer.zero_grad()\n",
+        "    # optimizer.zero_grad()\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
         "    \n",
         "\n",
         "  elif optimizer_name=='constrained_gd':\n",
         "    predictions=network(experiment.data.to(device).float()).view(-1)\n",
-        "    loss = F.nll_loss(F.log_softmax(predictions), targets)\n",
+        "    loss = criterion(predictions, targets)\n",
         "    error=sum(torch.ne(predictions,targets))\n",
-        "    optimizer.zero_grad()\n",
+        "    # optimizer.zero_grad()\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
         "    with torch.no_grad():\n",
@@ -450,9 +454,9 @@
         "  elif optimizer_name=='regularized_gd':\n",
         "    optimizer = torch.optim.SGD(network.parameters(), lr=lr, weight_decay=weight_decay) \n",
         "    predictions=network(experiment.data.to(device).float()).view(-1)\n",
-        "    loss = F.nll_loss(F.log_softmax(predictions), targets)\n",
+        "    loss = criterion(predictions, targets)\n",
         "    error=sum(torch.ne(predictions,targets))\n",
-        "    optimizer.zero_grad()\n",
+        "    # optimizer.zero_grad()\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
         "\n",
@@ -461,12 +465,12 @@
         "  elif optimizer_name=='sgd':\n",
         "    error=0\n",
         "    for i in range(0,len(experiment),batch_size):\n",
-        "      optimizer.zero_grad()\n",
+        "      # optimizer.zero_grad()\n",
         "      data,target=experiment[i]\n",
         "      data=data.to(device).float()\n",
         "      targets=target.type(torch.LongTensor).to(device)\n",
         "      predictions = network(data)\n",
-        "      loss = F.nll_loss(F.log_softmax(predictions), target)\n",
+        "      loss = criterion(predictions, target)\n",
         "      error+=predictions!=targets\n",
         "      loss.backward()\n",
         "      optimizer.step()\n",
@@ -485,7 +489,7 @@
       "metadata": {
         "id": "cix3bp5hjDSm"
       },
-      "execution_count": 11,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -500,7 +504,7 @@
         "momentum = 0.5\n",
         "log_interval = 1\n",
         "lrs=[1e-2,1e-1]\n",
-        "weight_decays=[1e-06, 1e-5, 1e-4]\n",
+        "weight_decays=[1e-4]\n",
         "\n",
         "random_seed = 1\n",
         "torch.backends.cudnn.enabled = False\n",
@@ -519,27 +523,28 @@
         "    for lr in lrs:\n",
         "      for weight_decay in weight_decays:\n",
         "          print(f\"experiment:{experiment} | optimizer_name:{optimizer_name}\")\n",
-        "          network = Net(n_feature=784, n_hidden=2, n_output=1)\n",
-        "          # run=wandb.init(project=\"Final Project in Advanced Lectures in Learning\", entity=\"sagit\", name=f\"experiment:{experiment} | optimizer_name:{optimizer_name} | lr:{lr} | weight_decay:{weight_decay}\")\n",
-        "          # wandb.watch(network, log_freq=1)\n",
+        "          network = Net(n_feature=784, n_hidden=500, n_output=1)\n",
+        "          run=wandb.init(project=\"Final Project in Advanced Lectures in Learning\", entity=\"sagit\", name=f\"experiment:{experiment} | optimizer_name:{optimizer_name} | lr:{lr} | weight_decay:{weight_decay}\")\n",
+        "          wandb.watch(network, log_freq=1)\n",
         "          for epoch in range(1, n_epochs + 1):\n",
         "            relics=train(experimetns[experiment],optimizer_name, epoch,lr, weight_decay)\n",
         "            if epoch % log_interval==0:\n",
         "              print(f\"loss:{relics['loss']} | error:{relics['error']}\")\n",
         "              print(f\"predictions: {relics['predictions']}\")\n",
         "              print(f\"targets: {relics['targets']}\")\n",
-        "              # wandb.log({\n",
-        "              #     \"loss\": relics[\"loss\"],\n",
-        "              #     \"error\": relics[\"error\"],\n",
-        "              #     \"epoch\": epoch\n",
-        "              # })"
+        "              wandb.log({\n",
+        "                  \"loss\": relics[\"loss\"],\n",
+        "                  \"error\": relics[\"error\"],\n",
+        "                  \"epoch\": epoch\n",
+        "              })"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 295
         },
         "id": "GqDlwznGi7je",
-        "outputId": "03484d3a-c3d8-4858-c027-43a41fc1c54d"
+        "outputId": "7fbcb8ed-6209-4c81-d64c-eb5acc80a168"
       },
       "execution_count": null,
       "outputs": [
@@ -549,6 +554,46 @@
           "text": [
             "Using device: cuda\n",
             "experiment:zero_to_four_vs_five_to_nine | optimizer_name:gd\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33msagit\u001b[0m (use `wandb login --relogin` to force relogin)\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "\n",
+              "                    Syncing run <strong><a href=\"https://wandb.ai/sagit/Final%20Project%20in%20Advanced%20Lectures%20in%20Learning/runs/eusmfi8l\" target=\"_blank\">experiment:zero_to_four_vs_five_to_nine | optimizer_name:gd | lr:0.01 | weight_decay:0.0001</a></strong> to <a href=\"https://wandb.ai/sagit/Final%20Project%20in%20Advanced%20Lectures%20in%20Learning\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">docs</a>).<br/>\n",
+              "\n",
+              "                "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "loss:0.46269840002059937 | error:0.9894166588783264\n",
+            "predictions: tensor([0.7734, 0.9851, 0.9727,  ..., 0.2380, 0.9391, 0.9997], device='cuda:0',\n",
+            "       grad_fn=<ViewBackward0>)\n",
+            "targets: tensor([0., 0., 0.,  ..., 0., 1., 0.], device='cuda:0')\n",
+            "loss:0.4812760353088379 | error:1.0\n",
+            "predictions: tensor([2.0055e-05, 1.0481e-04, 8.8994e-04,  ..., 5.3185e-06, 4.4059e-08,\n",
+            "        9.6248e-06], device='cuda:0', grad_fn=<ViewBackward0>)\n",
+            "targets: tensor([0., 0., 0.,  ..., 0., 1., 0.], device='cuda:0')\n",
+            "loss:0.46954309940338135 | error:1.0\n",
+            "predictions: tensor([7.0522e-05, 1.0189e-07, 1.4941e-03,  ..., 3.2749e-08, 4.3273e-10,\n",
+            "        3.7855e-09], device='cuda:0', grad_fn=<ViewBackward0>)\n",
+            "targets: tensor([0., 0., 0.,  ..., 0., 1., 0.], device='cuda:0')\n"
           ]
         }
       ]
@@ -570,7 +615,9 @@
         "**Answer:**\n",
         "Here is a table specifying the running times of each algorithm (per experiment) with different choise of parametes. \n",
         "Please visit Source: \n",
-        "If link is not accecible (the project is not public, please contact me: sagitiminsky@gmail.com and I will grant you access to view the dashboard)"
+        "If link is not accecible (the project is not public, please contact me: sagitiminsky@gmail.com and I will grant you access to view the dashboard)\n",
+        "\n",
+        "Please see \"RunTime\""
       ],
       "metadata": {
         "id": "oxXrgla7Qj4a"
